Implementacion de los roles correspondientes, excepto del rol de cajero